# rustrest

./: .env  Cargo.toml  Makefile  README.md  typesense-compose.yml
migration/: 001_create_users_table.sql  1733745811915_create_table_user.sql  1733745845139_create_table_credential.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/credential/: handler.rs  mod.rs  repo.rs  schema.rs  service.rs
src/api/schema/: request.rs  response.rs
src/api/v1/auth/: handler.rs
src/api/v1/credential/: handler.rs  mod.rs  schema.rs  service.rs
src/api/v1/user/: handler.rs
src/common/: internal_error.rs
src/config/: config.rs  database.rs  mod.rs  typesense.rs
src/http_handler/: mod.rs
src/http_handler/schema/: response.rs
src/http_handler/v1/auth/: handler.rs
src/http_handler/v1/credential/: handler.rs  schema.rs
src/http_handler/v1/user/: handler.rs  schema.rs
src/model/: credential.rs  mod.rs  user.rs
src/package/: log.rs
src/pkg/: mod.rs
src/pkg/typesense/: mod.rs  typesense.rs
src/repository/: credential.rs  mod.rs  user.rs
src/repository/postgres/: base.rs  credential.rs  mod.rs  postgres.rs
src/service/: credential.rs  mod.rs  user.rs
src/service/auth/: mod.rs  schema.rs  service.rs
src/util/: location.rs  log.rs  mod.rs  on_click_listener.rs
