[package]
name = "rustrest"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
dotenv = "0.15.0"
sqlx = { version = "0.7", features = ["postgres", "migrate", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
actix-web = "4"
serde = { version = "1.0.215", features = ["derive"] }