[package]
name = "rustrest"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
dotenv = "0.15.0"
sqlx = { version = "0.7", features = ["postgres", "migrate", "runtime-tokio", "uuid", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
actix-web = "4"
serde = { version = "1.0.215", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.1"
async-trait = "0.1.85"
bcrypt = "0.16.0"
